fixed spacing on home button and removed text-decoration

--- a/styles/home.css
+++ b/styles/home.css
@@ -8,17 +8,17 @@
     border-radius: 8px;
 }
 
-.navbar .lacasa a{
+.navbar .homebutton {
     color: #E5B142;
-    max-width: 60px;
 }
 
 .navbar a {
     padding-top: 10px;
+    text-decoration: none;
 }
 
 .container {
-    margin-top: 50px;
+    margin-top: 100px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
